# ylin

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.bat  dev.bat  package.json  start.bat
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_ops.rs  lib.rs  main.rs
src/js/: app.js  editor.js  file-tree.js  preview.js  themes.js  toolbar.js
src/styles/: editor.css  file-tree.css  main.css  preview.css  themes.css  toolbar.css
