[package]
name = "ylin"
version = "1.0.0"
description = "A fast, lightweight Markdown editor built with Tauri 2 + Rust"
authors = ["Fusw"]
license = "MIT"
repository = "https://github.com/Fuswn/ylin"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
walkdir = "2"
rfd = "0.15"
